# serializer version: 1
# name: TestPAMClustering.test_pam[event-edit]
  patient_id
  1     0
  2     4
  3     0
  4     0
  5     1
  6     2
  7     0
  8     0
  9     0
  10    3
  Name: __PAM_CLUSTERS__, dtype: Int32
# ---
# name: TestPAMClustering.test_pam[event-lcp]
  patient_id
  1     0
  2     0
  3     0
  4     0
  5     0
  6     0
  7     0
  8     0
  9     0
  10    0
  Name: __PAM_CLUSTERS__, dtype: Int32
# ---
# name: TestPAMClustering.test_pam[interval-edit]
  patient_id
  1     0
  2     3
  3     0
  4     4
  5     0
  6     1
  7     0
  8     2
  9     3
  10    0
  Name: __PAM_CLUSTERS__, dtype: Int32
# ---
# name: TestPAMClustering.test_pam[interval-lcp]
  patient_id
  1     0
  2     0
  3     0
  4     0
  5     0
  6     0
  7     0
  8     0
  9     0
  10    0
  Name: __PAM_CLUSTERS__, dtype: Int32
# ---
# name: TestPAMClustering.test_pam[state-edit]
  patient_id
  1     0
  2     0
  3     4
  4     0
  5     2
  6     1
  7     3
  8     0
  9     2
  10    0
  Name: __PAM_CLUSTERS__, dtype: Int32
# ---
# name: TestPAMClustering.test_pam[state-lcp]
  patient_id
  1     0
  2     0
  3     0
  4     1
  5     0
  6     0
  7     0
  8     0
  9     0
  10    0
  Name: __PAM_CLUSTERS__, dtype: Int32
# ---
# name: TestPAMClustering.test_pam_on_trajectory_pool
  patient_id
  1     0
  2     3
  3     0
  4     1
  5     2
  6     3
  7     0
  8     1
  9     2
  10    0
  Name: __PAM_CLUSTERS__, dtype: Int32
# ---
